# botErrECP

./: .gitignore  .python-version  README.md  config.py  ecpbot.spec  main.py  pyproject.toml  settings.toml
